--- a/robotnordic.css
+++ b/robotnordic.css
@@ -3,6 +3,8 @@
   padding: 0;
 }
 
-body{
-  font-family: 'Raleway', sans-serif;
-}
+
+  /* font til tekst: font-family: 'Raleway', sans-serif; */
+
+
+/* font til tal: font-family: 'Source Sans Pro', sans-serif; */
