--- a/robotnordic.css
+++ b/robotnordic.css
@@ -3,8 +3,33 @@
   padding: 0;
 }
 
+#canvas_container{
+  width: 100%;
+  height:812px;
+  margin:0;
+  position: absolute;
+}
+#my_canvas{
+ display: block;
+ float: left;
+ width: 100%;
+}
 
   /* font til tekst: font-family: 'Raleway', sans-serif; */
 
 
 /* font til tal: font-family: 'Source Sans Pro', sans-serif; */
+
+
+.wrapper{
+  display: flex;
+  position: relative;
+ }
+ 
+ .wrapper .sidebar{
+  background: white;
+  position: fixed;
+  width: 100%;
+  height:20%;
+ }
+ 
