--- a/robotnordic.css
+++ b/robotnordic.css
@@ -23,18 +23,18 @@
 
 /* --------- menu baren -----------*/
 .wrapper {
-  max-width: 100%;
+  width: 100%;
   margin: auto;
-  background-color: #555;
-  height: 500px;
-  color: white;
-  border-radius: 10px;
+  height:-5%;
+  background-color: #5f5c5c;
+  position: absolute;
 }
 
 .sidebar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #5f5c5c;
   position: relative;
+  height: 2%;
 }
 
 .sidebar #myLinks {
@@ -42,15 +42,17 @@
 }
 
 .sidebar a {
-  color: white;
-  padding: 14px 16px;
+  font-family: 'Raleway', sans-serif;
+  color:#F25835;
+  padding: 23px 25px;
+  margin-bottom: -10px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 23px;
   display: block;
+  position: relative;
 }
 
 .sidebar a.icon {
-  background: black;
   display: block;
   position: absolute;
   right: 0;
@@ -58,10 +60,5 @@
 }
 
 .sidebar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.logo {
-  width:120px;
+  color:#F25835;
 }
