--- a/robotnordic.css
+++ b/robotnordic.css
@@ -74,4 +74,65 @@
   float:right;
   margin-top:-69px;
   margin-right:145px;
- }
+}
+
+ /*---------- Login ---------*/
+.box {
+  width: 50%;
+  padding: 40px;
+  position: absolute;
+  top: 150%;
+  left: 15%;
+  background: #313c40; 
+  text-align: center; 
+}
+
+.box h1 {
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  text-transform: uppercase; 
+}
+
+    /* design for brugernavn og kodeord bokse */
+.box input[type = "text"], .box input[type = "password"]{
+  font-family: 'Raleway', sans-serif;
+  border:0;
+  background:none;
+  display:block; 
+  margin: 20px auto; 
+  text-align: center; 
+  border: 2px solid #F25835;
+  padding: 14px 10px; 
+  width: 80%; 
+  outline: none; 
+  color: white; 
+  border-radius: 24px; 
+  transition: 0.25s; 
+}
+
+    /* boksen udvider sig når musen fokuserer på en af boksene */
+.box input[type = "text"]:focus, .box input[type = "password"]:focus{
+  width: 100%; 
+  border-color: #72a895;
+  text-align:center;
+} 
+    /* design på login*/
+.box input[type = "submit"]{
+  font-family: 'Raleway', sans-serif;
+  border:0;
+  background:none;
+  display:block; 
+  margin: 20px auto; 
+  text-align: center; 
+  border: 2px solid #72a895;
+  padding: 14px 40px; 
+  width: 60%; 
+  outline: none; 
+  color: white; 
+  border-radius: 24px; 
+  transition: 0.25s; 
+}
+
+.box input[type = "submit"]:hover{
+  background: #72a895;
+}
