--- a/robotnordic.css
+++ b/robotnordic.css
@@ -103,18 +103,20 @@
   text-align: center; 
   border: 2px solid #F25835;
   padding: 14px 10px; 
-  width: 80%; 
+  width: 50%; 
   outline: none; 
-  color: white; 
-  border-radius: 24px; 
+  color:white; 
+  border-radius: 18px; 
   transition: 0.25s; 
 }
 
     /* boksen udvider sig når musen fokuserer på en af boksene */
 .box input[type = "text"]:focus, .box input[type = "password"]:focus{
-  width: 100%; 
+  width: 80%; 
   border-color: #72a895;
-  text-align:center;
+  display:flex;
+  justify-items: center;
+
 } 
     /* design på login*/
 .box input[type = "submit"]{
@@ -129,7 +131,7 @@
   width: 60%; 
   outline: none; 
   color: white; 
-  border-radius: 24px; 
+  border-radius: 18px; 
   transition: 0.25s; 
 }
 
