--- a/robotnordic.css
+++ b/robotnordic.css
@@ -164,3 +164,62 @@
   background-color: #313C40;
   color: #FF7152;
 }
+
+/*---------- forside.html ---------*/
+
+/*-----------knapper---------*/
+
+.menuknap {
+  position: relative;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  letter-spacing: 4px;
+  background: #313c40;
+  margin-top: 40%;
+  margin-left:15%;
+  text-align: center;
+  padding: 18px 14px;
+  width: 70%;
+  color:white;
+  border-radius: 18px;
+}
+.menuknap1 {
+  position: relative;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  letter-spacing: 4px;
+  background: #313c40;
+  margin-top: 10%;
+  margin-left:15%;
+  text-align: center;
+  padding: 18px 14px;
+  width: 70%;
+  color:white;
+  border-radius: 18px;
+}
+
+/*---------- Budskabstekst -------- */
+
+.overskriftforside {
+  position: relative;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 4px;
+  font-size: 29px;
+  background-color:#313c40;
+  opacity:0.8;
+  padding: 18px 18px; 
+  color: white;
+  margin-top: 15%;
+}
+
+.budskabstekst {
+  position: relative;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+  background-color:#313c40;
+  opacity: 0.8;
+  padding: 18px 18px; 
+  color: white; 
+  font-size: 18px;
+  line-height: 25px;
+}
