--- a/robotnordic.css
+++ b/robotnordic.css
@@ -119,7 +119,7 @@
 
 }
     /* design på login*/
-.box input[type = "submit"]{
+.box button{
   font-family: 'Raleway', sans-serif;
   border:0;
   background:none;
@@ -127,7 +127,7 @@
   margin: 20px auto;
   text-align: center;
   border: 2px solid #72a895;
-  padding: 14px 40px;
+  padding: 14px;
   width: 60%;
   outline: none;
   color: white;
@@ -135,7 +135,7 @@
   transition: 0.25s;
 }
 
-.box input[type = "submit"]:hover {
+.box button:hover {
   background-color: #72a895;
 }
 
