--- a/robotnordic.css
+++ b/robotnordic.css
@@ -124,7 +124,7 @@
     /* boksen udvider sig når musen fokuserer på en af boksene */
 .box input[type = "text"]:focus, .box input[type = "password"]:focus{
   width: 80%;
-  border-color: #72a895;
+  border-color: #5eb5eb;
   display:flex;
   justify-items: center;
 
@@ -137,7 +137,7 @@
   display:block;
   margin: 20px auto;
   text-align: center;
-  border: 2px solid #72a895;
+  border: 2px solid #5eb5eb;
   padding: 14px;
   width: 60%;
   outline: none;
@@ -148,7 +148,7 @@
 }
 
 .box button:hover {
-  background-color: #72a895;
+  background-color: #5eb5eb;
 }
 
 .log-ind-icon{
