--- a/robotnordic.css
+++ b/robotnordic.css
@@ -66,6 +66,7 @@
   float:right;
   margin-top: -69px;
   margin-right:70px;
+  border-radius: 3px;
  }
 
 .engelsk {
@@ -74,6 +75,7 @@
   float:right;
   margin-top: -69px;
   margin-right:110px;
+  border-radius: 3px;
 }
 
  /*---------- Login ---------*/
@@ -245,6 +247,9 @@ button{
   padding: 18px 18px;
   color: white;
   margin-top: 15%;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 18px 18px 0px 0px;
 }
 
 .budskabstekst {
@@ -257,6 +262,9 @@ button{
   color: white;
   font-size: 18px;
   line-height: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 0px 0px 18px 18px;
 }
 
 
