--- a/robotnordic.css
+++ b/robotnordic.css
@@ -219,6 +219,7 @@ button{
   width: 70%;
   color:white;
   border-radius: 18px;
+  cursor: pointer;
 }
 .menuknap1 {
   position: relative;
@@ -233,6 +234,7 @@ button{
   width: 70%;
   color:white;
   border-radius: 18px;
+  cursor: pointer;
 }
 
 /*---------- Budskabstekst -------- */
