--- a/robotnordic.css
+++ b/robotnordic.css
@@ -236,6 +236,20 @@
     cursor: pointer;
   }
 
+  .menuknap img{
+    width: 10%;
+    position: absolute;
+    left: 12px;
+    top: 13px;
+  }
+
+  .menuknap1 img{
+    width: 10%;
+    position: absolute;
+    left: 12px;
+    top: 13px;
+  }
+
   /*---------- Budskabstekst -------- */
   .overskriftforside {
     position: relative;
