--- a/robotnordic.css
+++ b/robotnordic.css
@@ -251,6 +251,81 @@
     top: 13px;
   }
 
+/*-------- dropdown bokse -------*/
+
+  .custom-select2{
+    position: absolute;
+    font-family: 'Raleway', sans-serif;
+    margin-top: 50%;
+    padding-top: -100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 18px;
+    letter-spacing: 4px;
+  }
+
+  .custom-select2 h1{
+    font-size: 24px;
+    border-radius: 5px;
+  }
+
+  /* gemmer select sectionen, så det kommer frem når man dropper down*/
+  .custom-select select {
+    display: none;
+  }
+
+  .select-selected {
+    background-color: #313c40;
+    border-radius: 18px;
+  }
+
+  /* design af pil ned */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 25px;
+    right: 20px;
+    width: 2px;
+    height: 10px;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+
+  /*gør at pilen vender op ad når select sectionen er nede*/
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+
+  /*design teksten i select*/
+  .select-items div, .select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+    user-select: none;
+    font-family: 'Raleway', sans-serif;
+    padding: 20px;
+  }
+
+  /* Design for dropdown boksen*/
+  .select-items {
+    position: absolute;
+    background-color: #313c40;
+    opacity: 0.8;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    border-radius: 0px 0px 18px 18px;
+  }
+
+  /*hide the items when the select box is closed:*/
+  .select-hide {
+    display: none;
+  }
+
   /*---------- Budskabstekst -------- */
   .overskriftforside {
     position: relative;
@@ -296,6 +371,7 @@
     font-size: 18px;
     letter-spacing: 4px;
   }
+
 
   /* gemmer select sectionen, så det kommer frem når man dropper down*/
   .custom-select select {
