--- a/Styleguide/styleguide.css
+++ b/Styleguide/styleguide.css
@@ -15,7 +15,7 @@ body {
 header {
   width: 100%;
   background-color: #313c40;
-  height: 100px;
+  height: 120px;
 }
 
 h1 {
@@ -25,6 +25,10 @@ h1 {
   padding-top: 25px;
   font-family: 'Source Sans Pro', sans-serif;
   letter-spacing: 2px;
+}
+
+header p{
+  color: #ffffff;
 }
 
 .typo {
