--- a/robotnordic.css
+++ b/robotnordic.css
@@ -325,7 +325,7 @@ button{
   padding: 18px;
   width: 100%;
   border: none;
-  text-align: left;
+  text-align: center;
   outline: none;
   font-size: 15px;
   transition: 0.4s;
