--- a/robotnordic.css
+++ b/robotnordic.css
@@ -408,3 +408,164 @@ button{
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+/*---------- panel.html ------------ */
+
+.h1-text{
+  top: 120px;
+  left: 125px;
+  position: absolute;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+}
+
+.top-line{
+  position: absolute;
+  top: 160px;
+  width: 80%;
+  left: 40px;
+}
+
+.panel-text{
+  position: absolute;
+  top: 170px;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+  margin-left: 45px;
+}
+
+.fyldnings, .pallenavn, .palletype, .procent{
+  margin-bottom: 10px;
+}
+
+.fyldnings, .fyldnings-test{
+  margin-top: 30px;
+}
+
+.panel-test{
+  position: absolute;
+  top: 170px;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+  margin-left: 295px;
+}
+
+.pl-test, .fyldnings-test, .procent-test{
+  margin-bottom: 10px;
+}
+
+.visning{
+  top: 420px;
+  left: 90px;
+  position: absolute;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+}
+
+.midt-line{
+  position: absolute;
+  top: 450px;
+  width: 80%;
+  left: 40px;
+}
+
+.se-palle{
+  position: absolute;
+  top: 470px;
+  left: 125px;
+  font-family: 'Raleway', sans-serif;
+  border:0;
+  background-color: #ffffff;
+  display:block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #FF7152;
+  padding: 14px;
+  width: 30%;
+  outline: none;
+  border-radius: 18px;
+  transition: 0.25s;
+  display: block;
+}
+
+.se-palle:hover{
+  background-color: #ff7152;
+  color: #ffffff;
+}
+
+.se-palle a{
+  text-decoration: none;
+  color: #ff7152;
+  letter-spacing: 2px;
+  display: block;
+}
+
+.se-palle a:hover{
+  color: #ffffff;
+}
+
+.kontrol{
+  top: 620px;
+  left: 105px;
+  position: absolute;
+  color: #000000;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+}
+
+.bottom-line{
+  position: absolute;
+  top: 650px;
+  width: 80%;
+  left: 40px;
+}
+
+.flex-knapper-pl{
+  position: absolute;
+  text-align: center;
+  top: 670px;
+  left: 90px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.print, .gem, .plan{
+  border:0;
+  background-color: #ffffff;
+  display:block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #FF7152;
+  padding: 24px;
+  width: 80%;
+  outline: none;
+  border-radius: 18px;
+  transition: 0.25s;
+  display: block;
+}
+
+.flex-knapper-pl a{
+  text-decoration: none;
+  color: #ff7152;
+}
+
+.pak{
+  border:0;
+  background-color: #72A895;
+  display:block;
+  margin: 20px auto;
+  text-align: center;
+  padding: 24px;
+  width: 80%;
+  outline: none;
+  border-radius: 18px;
+  transition: 0.25s;
+  display: block;
+}
