--- a/robotnordic.css
+++ b/robotnordic.css
@@ -90,11 +90,10 @@
 
  /*---------- Login ---------*/
 .box {
-  width: 50%;
+  width: 60%;
   padding: 40px;
-  position: absolute;
-  top: 20%;
-  left: 15%;
+  position: relative;
+  margin: 10% 20% 0 20%;
   background: #313c40;
   text-align: center;
   border-radius: 10px;
@@ -115,8 +114,8 @@
   margin: 20px auto;
   text-align: center;
   border: 2px solid #F25835;
-  padding: 14px 10px;
-  width: 50%;
+  padding: 5% 5% 5% 5%;
+  width: 70%;
   outline: none;
   color:white;
   border-radius: 18px;
@@ -135,7 +134,7 @@
 
     /* boksen udvider sig når musen fokuserer på en af boksene */
 .box input[type = "text"]:focus, .box input[type = "password"]:focus{
-  width: 80%;
+  width: 90%;
   border-color: #5eb5eb;
   display:flex;
   justify-items: center;
@@ -150,8 +149,8 @@
   margin: 20px auto;
   text-align: center;
   border: 2px solid #5eb5eb;
-  padding: 14px;
-  width: 50%;
+  padding: 5% 5% 5% 5%;
+  width: 70%;
   outline: none;
   color: white;
   border-radius: 18px;
@@ -169,10 +168,10 @@
 }
 
 .log-ind-icon{
-  width: 7%;
-  position: absolute;
-  left: 80px;
-  top: 243px;
+  width: 20%;
+  float: left;
+  display: inline;
+
 }
 
 .box a{
@@ -190,7 +189,7 @@ button{
   border:0;
   background:none;
   display:block;
-  margin: 20px auto;
+  margin: 5% 20% 0 20%;
   text-align: center;
   background-color: #F25835;
   padding: 14px 40px;
@@ -200,8 +199,7 @@ button{
   border-radius: 18px;
   transition: 0.25s;
   position: absolute;
-  top: 65%;
-  left: 21%;
+
 }
 
 .scan:hover {
