--- a/robotnordic.css
+++ b/robotnordic.css
@@ -698,7 +698,7 @@ button{
 
 /* slidshow*/
 * {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+body {font-family: Raleway, bold; margin:0}
 .mySlides {display: none}
 img {vertical-align: middle;}
 
@@ -738,7 +738,7 @@ img {vertical-align: middle;}
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: #000000;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
