--- a/robotnordic.css
+++ b/robotnordic.css
@@ -3,6 +3,9 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: Raleway;
+  letter-spacing: 2px;
+
 }
 
 /* --------- Baggrunds javascript -----------*/
@@ -412,10 +415,8 @@ button{
   font-size: 25px;
   transition: 0.4s;
   position: relative;
-  margin: 10%;
+  margin: 10% 10% 0 10%;
 }
-
-
 
 .accordion:after {
   content: '\25be';
@@ -426,24 +427,32 @@ button{
 
 .panel {
   margin: 0 10% 0 10%;
+  padding: 5% 0 5% 0;
   display: none;
   background-color: white;
   overflow: hidden;
   position: relative;
 }
 
+input {
+  width: 80%;
+  height: 28px;
+}
+
 .dropbtn {
   background-color: #313C40;
   color: white;
-  padding: 16px;
+  padding: 5% 0 5% 0%;
   font-size: 16px;
   border: none;
   cursor: pointer;
   width: 100%;
+  border-radius: 10px;
+
 }
 
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #717171;
 }
 
 .dropdown {
@@ -454,11 +463,11 @@ button{
 .dropdown-content {
   display: none;
   position: relative;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   min-width: 160px;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  padding: 10% 0 10% 0;
 }
 
 .dropdown-content a {
