--- a/robotnordic.css
+++ b/robotnordic.css
@@ -427,22 +427,32 @@ button{
 
 .panel {
   margin: 0 10% 0 10%;
-  padding: 5% 0 5% 0;
+  padding: 5% 5% 5% 5%;
   display: none;
   background-color: white;
   overflow: hidden;
   position: relative;
+  font-size: 20px;
+  border:1px solid #717171;
+  border-radius: 10px;
+
 }
+
 
 input {
   width: 80%;
-  height: 28px;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #717171;
+  padding-left: 10px;
+
 }
 
 .dropbtn {
   background-color: #313C40;
   color: white;
   padding: 5% 0 5% 0%;
+  margin: 3% 0 3% 0%;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -480,6 +490,74 @@ input {
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+/* The container */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin: 0% 0% 5% 0%;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #F25835;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #F25835;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
 
 /*---------- panel.html ------------ */
 
