--- a/robotnordic.css
+++ b/robotnordic.css
@@ -448,6 +448,19 @@ input {
 
 }
 
+#formularvalg {
+  width: 80%;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #717171;
+  padding-left: 10px;
+}
+
+option {
+  font-size: 25px;
+  background-color:#717171;
+}
+
 .dropbtn {
   background-color: #313C40;
   color: white;
