--- a/robotnordic.css
+++ b/robotnordic.css
@@ -352,54 +352,7 @@ button{
 }
 
 
-/*---------- Template.html ------------ */
-
-/*-------- dropdown bokse
-
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  width: 250px;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin: 17%;
-  padding-top: 15%;
-
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 20px;
-  width: 250px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown a:hover {background-color: #ddd;}
-
-.show {display: block;}
--------*/
+/*------.accordian------*/
 
 .accordion {
   background-color: #313C40;
@@ -438,7 +391,7 @@ button{
 
 }
 
-.accordion2 {
+.accordion2, .accordion3 {
   background-color: #2196F3;
   color: #ffffff;
   cursor: pointer;
@@ -596,6 +549,7 @@ option {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 
 
 /*---------- panel.html ------------ */
