--- a/robotnordic.css
+++ b/robotnordic.css
@@ -19,6 +19,7 @@
  display: block;
  float: left;
  width: 100%;
+ z-index: 1;
 }
 
 
@@ -550,6 +551,48 @@ option {
   transform: rotate(45deg);
 }
 
+.Nulstil {
+  z-index: 2;
+  position: relative;
+  display: block;
+  background-color: #F25835;
+  color: white;
+  margin: auto;
+  margin-top: 20%;
+  width: 50%;
+  padding: 3% 3% 3% 3%;
+  border-radius: 10px;
+  font-size: 16px;
+
+}
+
+.GemPalle {
+  z-index: 2;
+  position: relative;
+  display: block;
+  background-color: white;
+  border: 1px solid #F25835;
+  color: #F25835;
+  margin: auto;
+  margin-top: 5%;
+  width: 50%;
+  padding: 3% 3% 3% 3%;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.Videre {
+  z-index: 2;
+  position: relative;
+  display: block;
+  background-color: #5eb5eb;
+  color: white;
+  margin: auto;
+  margin-top: 5%;
+  width: 50%;
+  padding: 3% 3% 3% 3%;
+  border-radius: 10px;
+  font-size: 16px;
 
 
 /*---------- panel.html ------------ */
