--- a/robotnordic.css
+++ b/robotnordic.css
@@ -589,6 +589,7 @@ option {
   color: white;
   margin: auto;
   margin-top: 5%;
+  margin-bottom: 10%;
   width: 50%;
   padding: 3% 3% 3% 3%;
   border-radius: 10px;
